2002-09-12  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Fixed some bugs that remained (in rubber-info's
	--deps action) since the class fusion (see 2002-09-05).

2002-09-11  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py, src/info.py, man/: Introduced the actions
	--refs and --warnings in rubber-info.

2002-09-06  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.2 released.

	* setup.py, debian/control: Updated the package descriptions.

	* src/__init__.py (LogCheck.update_file): Fixed a bug that might
	happen in file-name tracking due to unbalanced parentheses in the
	log.

2002-09-05  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py: Introduced the -f command-line
	option.

	* man/: Also updated the description of the graphic[sx] modules.

	* all: Made one class out of Environment, Process and Parser. The
	message writers are now created by the interfaces (as it should
	always have been).

2002-09-04  Emmanuel Beffara  <manu@beffara.org>

	* ChangeLog: introduced the change log (thanks to cvs2cl :-)

2002-09-02  Emmanuel Beffara <manu@beffara.org>

	* README, TODO, configure, man/.cvsignore: Introduced TODO. Some
	updates.

	* setup.py: Added installation of rubber-info's man pages.

	* src/graphics/mpost.py: Added dependency analysis for Metapost
	sources.

	* src/modules/vt100.py: Introduced experimental VT100 coloring
	module.

	* debian/control: Fixed building dependencies for Debian.

	* src/__init__.py, modules/: Fixed file name computation so that
	compiling a document from another directory works.

2002-08-21  Emmanuel Beffara <manu@beffara.org>

	* src/util.py, src/modules/bibtex.py: Small bugfix in DependLeaf.

2002-08-03  Emmanuel Beffara <manu@beffara.org>

	* src/graphics/mpost.py: Fixed a small bug in MetaPost support.

2002-07-16  Emmanuel Beffara <manu@beffara.org>

	* README: Kudos to Mr Jeandel!

	* src/util.py: Now (but temporarily) fails when a leaf dependency
	doesn't exist.
